syntax = "proto3";

option go_package = "github.com/ppzxc/go-grpc-examples-benchmark/proto/example";

package ppzxc.grpc.example;

// UnaryRequest is the request for basic.
message Request {
  uint64 uid = 1;
  bytes message = 2;
  int32 len = 3;
  int32 connNumber = 4;
  int32 workerNumber = 5;
}

// UnaryResponse is the response for basic.
message Response {
  uint64 uid = 1;
  bytes message = 2;
  int32 len = 3;
  int32 connNumber = 4;
  int32 workerNumber = 5;
}

// UnaryExample is the example for unary.
service Example {
  rpc UnaryEcho(Request) returns (Response) {}
  rpc ClientStream(stream Request) returns (Response) {}
  rpc ServerStream(Request) returns (stream Response) {}
  rpc BiStream(stream Request) returns (stream Response) {}
}